--- a/ToDo List (HTML, JS, CSS)/index.html
+++ b/ToDo List (HTML, JS, CSS)/index.html
@@ -10,18 +10,31 @@
 	<body>
 		<header>
 			<input type="text" placeholder="Add a ToDo" id="item">
+			<div id=itemoptions>
+				<input type="checkbox" name="daily" id="dailyCheck"><label>Daily</label>
+				<select id="timegoal">
+					<option value="0">Not Timed</option>
+					<option value="1">1 Hour</option>
+					<option value="2">2 Hours</option>
+					<option value="3">3 Hours</option>
+				</select>
+			</div>
 			<button id="add">
 				<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve"><g><path class="fill" d="M16,8c0,0.5-0.5,1-1,1H9v6c0,0.5-0.5,1-1,1s-1-0.5-1-1V9H1C0.5,9,0,8.5,0,8s0.5-1,1-1h6V1c0-0.5,0.5-1,1-1s1,0.5,1,1v6h6C15.5,7,16,7.5,16,8z"/></g></svg>
 			</button>
-			
+			<div id="dayleft">
+				<div id="daypercent">99.99%</div>
+				<div id="daytext">of Day Remaining</div>
+			</div>
 		</header>
 
 		<div class="container">
+
+			<!-- Completeing -->
+			<ul class="todo" id="completing"></ul>
+
 			<!-- Uncompleted -->
 			<ul class="todo" id="incomplete"></ul>
-
-			<!-- Completed -->
-			<ul class="todo" id="completed"></ul>
 	
 		</div>
 
